# freeda

./: .gitattributes  .gitignore  FREEDA_troubleshooting.txt  LICENSE  README.md  debug_mac_one_file.spec  freeda_logo.ai  freeda_pipeline.py  freeda_pipeline_GUI.py  freeda_pipeline_cli.py  linux_one_file.spec  linux_one_folder.spec  mac_one_file.spec  mac_one_file_cli.spec  mac_one_folder.spec  one_file.spec  one_folder.spec  pyproject.toml  requirements.txt  setup.cfg  setup.py
.spyproject/config/: workspace.ini
FREEDA.app/Contents/: Info.plist
docs/: Makefile  README.md  conf.py  development.html  getstarted.html  index.html  index.rst  search.html  searchindex.js
docs/_sources/: troubleshooting.rst.txt
docs/source/: advanced.rst  assemblies.rst  conf.py  development.rst  getstarted.rst  index.rst  installation.rst  overview.rst  troubleshooting.rst  usage.rst
documentation/source/: advanced.rst  conf.py  development.rst  getstarted.rst  index.rst  overview.rst  usage.rst  (+1 more)
freeda/: MUSCULUS_genome_contigs.txt  TextHandler.py  cds_cloner.py  control_file.py  exon_extractor.py  exon_finder.py  fasta_reader.py  folder_generator.py  gene_and_cds_reader.py  genome_indexer.py  genomes_preprocessing.py  gui_logging_handler.py  input_extractor.py  matches_generator.py  matches_processor.py  msa_aligner.py  msa_analyzer.py  muscle_accessory.py  name_finder.py  paml_launcher.py  paml_visualizer.py  pyinstaller_compatibility.py  reference_genome_dict_generator.py  settings_modifier.py  structure_builder.py  tblastn.py  user_interface.py
releases/: FREEDA_GUI_LINUX.run
(+134 files in other folders)
