# replace with your username:name = freeda-Damian-Dudkaversion = 0.0.1author = Damian Dudkaauthor_email = damiandudka0@gmail.comdescription = Finder of Rapidly Evolving Exons in De novo Assemblieslong_description = file: README.mdlong_description_content_type = text/markdownurl = https://github.com/DDudka9/freeda_packageproject_urls = https://github.com/DDudka9/freeda_packageclassifiers =     Programming Language :: Python :: 3    License :: OSI Approved :: MIT License    Operating System :: MacOS (10.14.6)[options]package_dir =    = freedapackages = find:python_requires = >=3.7[options.packages.find]where = freeda